--- a/static/bills.css
+++ b/static/bills.css
@@ -21,7 +21,7 @@ body {
   height: fit-content;
   /* display: block; */
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 2em;
   justify-content: space-around;
 }
@@ -37,7 +37,6 @@ body {
   text-align: center;
   position: relative;
   border: 2px solid wheat;
-  left: 82%;
 }
 li {
   list-style-type: none;
@@ -58,6 +57,7 @@ table {
   color: black;
   border: 2px solid black;
   margin: 1em 0;
+  width: 40em;
   /* position: relative;
   left: -38%; */
 }
@@ -69,9 +69,12 @@ thead {
 }
 .buttons {
   background-color: transparent;
-  /* height: inherit; */
+  gap: 2em;
   margin: 5em 0;
+  display: flex;
+  flex-direction: row;
   height: fit-content;
+
 }
 
 button {
@@ -81,9 +84,10 @@ button {
   border: 2px solid wheat;
   background-color: transparent;
   color: wheat;
-  margin: 0.5em 0;
+  margin: 1.5em 0;
   position: relative;
-  right: 155%;
+  right: -78%;
+  bottom: -240%;
   transition: all ease 0.4s;
 }
 button:hover {
@@ -96,11 +100,11 @@ button:hover {
 }
 .list {
   position: relative;
-  right: 25%;
+  right: -17%;
   width: fit-content;
-
+  height: fit-content;
   margin-top: 2em;
 }
 tr {
-
+  font-size: 1.2em;
 }
