--- a/templates/Order.html
+++ b/templates/Order.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}" />
   </head>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images.jpeg') }}">
+
   <body>
     <form action="/submit_order" method="post">
       <center>
