--- a/templates/Added.html
+++ b/templates/Added.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Added</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images.jpeg') }}">
+
     <style>
       body {
         background-color: rgb(30, 29, 29);
