--- a/templates/Items.html
+++ b/templates/Items.html
@@ -7,6 +7,8 @@
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style3.css') }}" />
+      <link rel="shortcut icon" href="{{ url_for('static', filename='images.jpeg') }}">
+
   </head>
   <body>
     <form method="POST" action="/submit_order">
