--- a/templates/OrderSuccess.html
+++ b/templates/OrderSuccess.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Order Successful</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images.jpeg') }}">
+
     <style>
       body {
         background-color: black;
