--- a/templates/RemoveItem.html
+++ b/templates/RemoveItem.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remove Items</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images.jpeg') }}">
+
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='managementCSS.css') }}" />
